--- a/app.json
+++ b/app.json
@@ -20,8 +20,11 @@
     "SERVER_URL": {
       "description": "URL to connect to your Heroku instance (update with your app's name + PARSE_MOUNT)",
       "value": "http://yourappname.herokuapp.com/parse"
+    },
+    "MONGODB_URI": {
+      "description": "Mongo url",
+      "value": "mongodb://localhost:27017/dev"
     }
   },
-  "image": "heroku/nodejs",
-  "addons": ["mongolab"]
+  "image": "heroku/nodejs"
 }
